# job-posting-lead-finder-python

./: CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: bulk_search.py  crm_csv_export.py  cross_source_winners.py  daily_monitoring.py  pay_transparency_compliance_audit.py  quickstart.py  sales_outreach_pipeline.py  tech_skills_targeted_outreach.py
job_lead_finder/: __init__.py  client.py  exceptions.py
