[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "job-posting-lead-finder"
version = "0.1.0"
description = "Python SDK for the Job Posting Lead Finder Apify actor — multi-source job aggregator (Indeed + LinkedIn + optional Glassdoor) turned into a B2B sales prospecting tool. 40+ enrichment fields per job: USD-normalized salary parser (7 currencies), 225 tech skills extraction, 14 benefit flags, 15 job categories, 11 seniority buckets, location parser, 7 DEI signals, US pay-transparency law detection, leadScore 0-100 (cross-source × hiring volume × seniority × salary disclosure), 3-variant outreach pitches, one-click research links, CSV export ready for HubSpot/Salesforce/Pipedrive. No login. $0.003/job."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "ApiVault Labs" }]
keywords = [
    "indeed", "indeed-scraper", "indeed-jobs",
    "linkedin", "linkedin-jobs", "linkedin-jobs-scraper",
    "linkedin-without-login", "linkedin-without-api-key",
    "glassdoor", "glassdoor-jobs",
    "job-scraper", "job-board-scraper", "job-aggregator",
    "job-search-api", "job-listings-api",
    "lead-generation", "b2b-lead-gen", "b2b-prospecting",
    "sales-prospecting", "sales-intelligence",
    "company-hiring-data", "hiring-signals", "hiring-trends",
    "outreach-automation", "cold-email", "cold-outreach",
    "crm-enrichment", "hubspot-enrichment", "salesforce-import",
    "pipedrive-import",
    "salary-parser", "salary-benchmarking", "compensation-data",
    "skills-extraction", "skills-taxonomy",
    "recruiter-tools", "recruitment-tech", "ats-data",
    "sourcing-tool", "talent-acquisition",
    "remote-jobs-api", "diversity-hiring", "pay-transparency",
    "labor-market-data",
    "apollo-alternative", "zoominfo-alternative",
    "rocketreach-alternative", "sales-navigator-alternative",
    "web-scraping", "apify", "apify-actor", "python-sdk",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Human Resources",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Office/Business",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.9"
dependencies = [
    "requests>=2.31.0",
]

[project.urls]
Homepage = "https://github.com/apivault-labs/job-posting-lead-finder-python"
Documentation = "https://github.com/apivault-labs/job-posting-lead-finder-python#readme"
"Apify Actor" = "https://apify.com/apivault_labs/apify-actor-job-leads"
"Bug Tracker" = "https://github.com/apivault-labs/job-posting-lead-finder-python/issues"

[tool.setuptools.packages.find]
include = ["job_lead_finder*"]
